--- a/app/src/main/res/menu/bottom_navigation_main.xml
+++ b/app/src/main/res/menu/bottom_navigation_main.xml
@@ -20,5 +20,5 @@
 
   <item
       android:id="@+id/nav_rem"
-      android:icon="@drawable/bnv_gift" />
+      android:icon="@drawable/ic_giftbox" />
 </menu>
