--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,6 @@
     <color name="green_color_active">#00ca71</color>
     <color name="green_color_inactive">#7065CCA2</color>
     <color name="extreme_text">#ff7c80</color>
+    <color name="trans_black">#c0000000</color>
+
 </resources>
