--- a/app/src/main/res/layout/diamond_act.xml
+++ b/app/src/main/res/layout/diamond_act.xml
@@ -23,7 +23,7 @@
       android:layout_gravity="center_horizontal"
       android:layout_marginTop="27dp"
       android:fontFamily="@font/roboto_bold"
-      android:text="VIP версия"
+      android:text="@string/ab_vip_version"
       android:textColor="@color/trans_black"
       android:textSize="20sp"
       android:layout_weight="39"
@@ -40,7 +40,7 @@
       android:fontFamily="@font/roboto_medium"
       android:gravity="center"
       android:layout_weight="56"
-      android:text="Разблокируйте весь контент и уберите рекламу в один клик!"
+      android:text="@string/ab_unlock"
       android:textColor="@color/trans_black"
       android:textSize="14sp"
       />
@@ -87,7 +87,8 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@drawable/btn_optimize"
-      android:text="ПОЛУЧИТЬ VIP ВЕРСИЮ"
+      android:text="@string/ab_get_vip"
+      android:textAllCaps="true"
       android:layout_gravity="center_horizontal"
       android:layout_marginTop="56dp"
       android:textColor="@color/btn_white"
@@ -105,7 +106,7 @@
       android:textSize="14sp"
       android:layout_gravity="center_horizontal"
       android:textColor="@color/trans_black"
-      android:text="Продолжить бесплатно с рекламой"
+      android:text="@string/ab_free_with_ads"
       android:fontFamily="@font/roboto_medium"
       android:layout_marginTop="16dp"
       android:layout_weight="28"
