--- a/app/src/main/res/layout/line_act.xml
+++ b/app/src/main/res/layout/line_act.xml
@@ -10,7 +10,7 @@
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Профессиональная очистка с"
+      android:text="@string/ab_prof_clean"
       android:layout_gravity="center"
       android:layout_marginTop="27dp"
       android:textColor="@color/trans_black"
@@ -22,7 +22,7 @@
       android:layout_height="wrap_content"
       android:textSize="34sp"
       android:textColor="@color/trans_black"
-      android:text="Phone cleaner"
+      android:text="@string/ab_cleaner"
       android:layout_gravity="center"
       android:fontFamily="@font/roboto_medium"
       />
@@ -37,7 +37,7 @@
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Без рекламы"
+      android:text="@string/ab_ads"
       android:textColor="@color/trans_black"
       android:textSize="18sp"
       android:fontFamily="@font/roboto_medium"
@@ -50,7 +50,7 @@
       android:textSize="14sp"
       android:fontFamily="@font/roboto"
       android:textColor="@color/trans_black"
-      android:text="Очистка телефона без прерываний на рекламу"
+      android:text="@string/ab_no_stop"
       android:layout_marginTop="4dp"
       android:gravity="center_horizontal"
       android:layout_gravity="center_horizontal"
@@ -67,7 +67,7 @@
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Очистка кэша приложений"
+      android:text="@string/ab_cache"
       android:textColor="@color/trans_black"
       android:textSize="18sp"
       android:fontFamily="@font/roboto_medium"
@@ -80,7 +80,7 @@
       android:textSize="14sp"
       android:fontFamily="@font/roboto"
       android:textColor="@color/trans_black"
-      android:text="Анализирует все приложения в телефоне и удаляет кэш ненужных  приложений, если это не помешает работе телефона"
+      android:text="@string/ab_analyze"
       android:layout_marginTop="4dp"
       android:gravity="center_horizontal"
       android:layout_gravity="center_horizontal"
@@ -97,7 +97,7 @@
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Ускорение работы телефона"
+      android:text="@string/ab_boost"
       android:textColor="@color/trans_black"
       android:textSize="18sp"
       android:fontFamily="@font/roboto_medium"
@@ -110,7 +110,7 @@
       android:textSize="14sp"
       android:fontFamily="@font/roboto"
       android:textColor="@color/trans_black"
-      android:text="Закрытие приложений,которые работают в фоновом режиме,для освобождения  оперативной памяти и ускорения работы телефона"
+      android:text="@string/ab_background"
       android:layout_marginTop="4dp"
       android:gravity="center_horizontal"
       android:layout_gravity="center_horizontal"
@@ -127,7 +127,7 @@
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Охлаждение CPU"
+      android:text="@string/ab_cool_cpu"
       android:textColor="@color/trans_black"
       android:textSize="18sp"
       android:fontFamily="@font/roboto_medium"
@@ -140,7 +140,7 @@
       android:textSize="14sp"
       android:fontFamily="@font/roboto"
       android:textColor="@color/trans_black"
-      android:text="Позволяет одним нажатием эффективно охладить температуру CPU вашего телефона"
+      android:text="@string/ab_cool_cpu_text"
       android:layout_marginTop="4dp"
       android:gravity="center_horizontal"
       android:layout_gravity="center_horizontal"
@@ -157,7 +157,7 @@
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Экономия заряда аккумулятора"
+      android:text="@string/ab_battery"
       android:textColor="@color/trans_black"
       android:textSize="18sp"
       android:fontFamily="@font/roboto_medium"
@@ -170,7 +170,7 @@
       android:textSize="14sp"
       android:fontFamily="@font/roboto"
       android:textColor="@color/trans_black"
-      android:text="Позволяет одним нажатием закрыть приложения. При низком заряде аккумулятора, эта функция напомнит вам закрыть"
+      android:text="@string/ab_battery_text"
       android:layout_marginTop="4dp"
       android:gravity="center_horizontal"
       android:layout_gravity="center_horizontal"
@@ -181,7 +181,8 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@drawable/btn_optimize"
-      android:text="ПОЛУЧИТЬ VIP ВЕРСИЮ"
+      android:text="@string/ab_next"
+      android:textAllCaps="true"
       android:layout_gravity="center_horizontal"
       android:layout_marginTop="56dp"
       android:textColor="@color/btn_white"
@@ -199,7 +200,7 @@
       android:textSize="14sp"
       android:layout_gravity="center_horizontal"
       android:textColor="@color/trans_black"
-      android:text="Продолжить бесплатно с рекламой"
+      android:text="@string/ab_free_with_ads"
       android:fontFamily="@font/roboto_medium"
       android:layout_marginTop="16dp"
       android:layout_weight="28"
