--- a/app/src/main/res/layout/security_graph_act.xml
+++ b/app/src/main/res/layout/security_graph_act.xml
@@ -16,7 +16,7 @@
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:text="В среднем сканирование телефона с помощью Phone Cleaner ускоряет работу телефона на 53%"
+      android:text="@string/ab_sg_text"
       android:textColor="@color/trans_black"
       android:fontFamily="@font/roboto"
       android:gravity="center"
@@ -39,7 +39,7 @@
       android:layout_height="wrap_content"
       android:fontFamily="@font/roboto"
       android:textColor="@color/trans_black"
-      android:text="А так же сокращает вероятность заражения высокотехнологичным вирусом-шпионом на 97%"
+      android:text="@string/ab_sg_title"
       android:layout_marginTop="15dp"
       android:layout_marginEnd="16dp"
       android:layout_marginStart="16dp"
@@ -52,7 +52,7 @@
       android:layout_width="134dp"
       android:layout_height="wrap_content"
       android:background="@drawable/btn_optimize"
-      android:text="Далее"
+      android:text="@string/ab_next"
       android:textAllCaps="true"
       android:layout_gravity="center_horizontal|bottom"
       android:layout_marginTop="44dp"
