--- a/app/src/main/res/layout/security_graph_act.xml
+++ b/app/src/main/res/layout/security_graph_act.xml
@@ -10,7 +10,7 @@
       android:src="@drawable/img_graph_rocket"
       android:layout_marginTop="28dp"
       android:layout_gravity="center_horizontal"
-      android:layout_weight="284dp"
+      android:layout_weight="284"
       />
 
   <TextView
@@ -23,7 +23,7 @@
       android:layout_marginTop="16dp"
       android:layout_marginStart="16dp"
       android:layout_marginEnd="16dp"
-      android:layout_weight="94dp"
+      android:layout_weight="94"
       />
 
   <ImageView
@@ -31,7 +31,7 @@
       android:layout_height="wrap_content"
       android:src="@drawable/img_graph_sec"
       android:layout_gravity="center_horizontal"
-      android:layout_weight="194dp"
+      android:layout_weight="194"
       android:layout_marginTop="20dp"/>
 
   <TextView
@@ -44,7 +44,7 @@
       android:layout_marginEnd="16dp"
       android:layout_marginStart="16dp"
       android:gravity="center"
-      android:layout_weight="125dp"
+      android:layout_weight="125"
       android:layout_gravity="center_horizontal"/>
 
   <Button
