--- a/app/src/main/res/layout/battery_graph_act.xml
+++ b/app/src/main/res/layout/battery_graph_act.xml
@@ -45,7 +45,7 @@
       android:layout_gravity="center_horizontal"/>
 
   <Button
-      android:id="@+id/btnPay"
+      android:id="@+id/btnNext"
       android:layout_width="134dp"
       android:layout_height="wrap_content"
       android:background="@drawable/btn_optimize"
