--- a/app/src/main/res/layout/banner_layout.xml
+++ b/app/src/main/res/layout/banner_layout.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         ads:adSize="SMART_BANNER"
+        android:visibility="gone"
         ads:adUnitId="@string/banner_key"
         />
 </LinearLayout>
