--- a/app/src/main/res/menu/bottom_navigation_main.xml
+++ b/app/src/main/res/menu/bottom_navigation_main.xml
@@ -10,9 +10,9 @@
       android:id="@+id/nav_battery"
       android:icon="@drawable/ic_nav_battery" />-->
 
-  <!--<item
+  <item
       android:id="@+id/nav_fan"
-      android:icon="@drawable/ic_nav_fan" />-->
+      android:icon="@drawable/ic_nav_fan" />
 
   <!--<item
       android:id="@+id/nav_delete"
