--- a/app/src/main/res/menu/bottom_navigation_main.xml
+++ b/app/src/main/res/menu/bottom_navigation_main.xml
@@ -14,9 +14,9 @@
       android:id="@+id/nav_fan"
       android:icon="@drawable/ic_nav_fan" />
 
-  <item
+  <!--<item
       android:id="@+id/nav_delete"
-      android:icon="@drawable/ic_nav_delete" />
+      android:icon="@drawable/ic_nav_delete" />-->
 
   <!--<item
       android:id="@+id/nav_rem"
