--- a/app/src/main/res/layout/battery_saver.xml
+++ b/app/src/main/res/layout/battery_saver.xml
@@ -24,29 +24,41 @@
       android:id="@+id/imageView3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginStart="32dp"
       android:layout_marginTop="24dp"
-      android:layout_marginEnd="16dp"
       android:translationY="-120dp"
       app:layout_constraintEnd_toStartOf="@+id/imageView6"
       app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textView6"
-      app:srcCompat="@drawable/btn_easy" />
+      app:srcCompat="@drawable/btn_easy"
+      />
 
   <ImageView
       android:id="@+id/imageView6"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginStart="16dp"
-      android:layout_marginEnd="32dp"
       android:translationY="-120dp"
       app:layout_constraintBottom_toBottomOf="@+id/imageView3"
-      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintEnd_toStartOf="@+id/imageView7"
+      app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toEndOf="@+id/imageView3"
       app:layout_constraintTop_toTopOf="@+id/imageView3"
       app:layout_constraintVertical_bias="0.0"
-      app:srcCompat="@drawable/btn_medium" />
+      app:srcCompat="@drawable/btn_medium"
+      />
+  <ImageView
+      android:id="@+id/imageView7"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:translationY="-120dp"
+      app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.5"
+      app:layout_constraintStart_toEndOf="@+id/imageView6"
+      app:layout_constraintTop_toTopOf="@+id/imageView3"
+      app:layout_constraintVertical_bias="0.0"
+      app:srcCompat="@drawable/btn_hard"
+      />
 
   <Space
       android:id="@+id/space"
@@ -169,6 +181,18 @@
       app:layout_constraintEnd_toEndOf="@+id/imageView6"
       app:layout_constraintStart_toStartOf="@+id/imageView6"
       app:layout_constraintTop_toBottomOf="@+id/imageView6"
+      />
+
+  <TextView
+      android:id="@+id/textView10"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Extreme mode"
+      android:textSize="14sp"
+      android:translationY="-120dp"
+      app:layout_constraintEnd_toEndOf="@+id/imageView7"
+      app:layout_constraintStart_toStartOf="@+id/imageView7"
+      app:layout_constraintTop_toBottomOf="@+id/imageView7"
       />
 
 
